# PAYROLL

./: PAYROLL.spec  PAYROLL_mac.spec  README.md  app.py  cli.py  config.py  license_generator.py  models.py  new_app.py  pyproject.toml  requirements.txt
defaults/: config.yaml  public_key.pem  template.xlsx
emails/: message_sender.py
excel/: copy_blocks.py  fill_template.py  images.py
services/: generator.py  send_logger.py  sender.py  table.html
utils/: a1rc.py  dates.py  license_validator.py  numbers.py  paths.py
